--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
   </div>
   <div class="col-xs-12 col-md-8" itemprop="description">
 <h1 id="aboutme">About Me</h1>
-<p> I am currently a Ph.D. Candidate at Stanford University, where my research focuses on building intelligent autonomous agents that are capable of exploring unknown environments. My research lies at the intersection of applying Convex Optimization, POMDPs, and deep reinforcement learning to push the boundaries of Artificial Intelligence to solve complex, real-world challenges in autonomy. </p>
-<p> In the Stanford Intelligent Systems Laboratory (SISL), my work primarily revolves around decision-making under uncertainty for autonomous systems. I have worked in collaboration with NASA JPL, where I was a visiting researcher for the autonomous planning team competing in the DARPA Subterranean Challenge, as well as with NASA Ames, working on the VIPER mission to the lunar South Pole. </p>
+<p> My research focuses on building intelligent autonomous agents that are capable of exploring unknown environments. My research lies at the intersection of applying Convex Optimization, POMDPs, and deep reinforcement learning to push the boundaries of Artificial Intelligence to solve complex, real-world challenges in autonomy. </p>
+<p> I completed my Ph.D. in the Stanford Intelligent Systems Laboratory (SISL) advised by Professor Mykel Kochenderfer, where my work primarily revolved around decision-making under uncertainty for autonomous systems. I have worked in collaboration with NASA JPL, where I was a visiting researcher for the autonomous planning team competing in the DARPA Subterranean Challenge, as well as with NASA Ames, working on the VIPER mission to the lunar South Pole. </p>
   <!-- <div class="row">
       <div class="col-sm-5">
         <h3>Interests</h3>
